2007-04-13  Michael Natterer  <mitch@gimp.org>

	* app/base/base-types.h
	* app/base/temp-buf.[ch]: remove redundant and inconsistently used
	MaskBuf type and API.

	* app/core/gimpbrush-scale.c
	* app/paint/gimpbrushcore.[ch]: use TempBuf and its API instead.
	This also optimizes away a useless memset() on brush scaling,
	we completely fill each of the created buffers anyway.

2007-04-12  Sven Neumann  <sven@gimp.org>

	* app/tools/gimprectangleselecttool.c: implement
	GimpTool::key_press and delegate to the rectangle tool or the edit
	selection tool. This resurrects positioning of floating selections
	with the cursor keys.

2007-04-12  Sven Neumann  <sven@gimp.org>

	* tools/pdbgen/pdb/display.pdb (display_delete): added a note that
	calling this function may cause data loss.

	* app/pdb/display_cmds.c
	* libgimp/gimpdisplay_pdb.c: regenerated.

2007-04-12  Raphaël Quinet  <raphael@gimp.org>

	* plug-ins/metadata/xmp-parse.c: made the parser more tolerant and
	accept XMP blocks that are not using the namespace prefixes
	recommended by the XMP specification.

2007-04-12  Sven Neumann  <sven@gimp.org>

	* app/actions/plug-in-commands.c: if a plug-in or script
	registered with a DISPLAY argument after the run-mode argument,
	then pass the ID of the active display to the script, optionally
	followed by image and drawable IDs.

	* plug-ins/script-fu/scheme-wrapper.c
	* plug-ins/script-fu/script-fu-enums.h
	* plug-ins/script-fu/script-fu-interface.c
	* plug-ins/script-fu/script-fu-scripts.c
	* plug-ins/script-fu/script-fu-types.h: added SF-DISPLAY parameter.

2007-04-12  Sven Neumann  <sven@gimp.org>

	* plug-ins/sel2path/*.[ch]: updated copyright header.

2007-04-12  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/channel_mixer.c
	* plug-ins/gfig/gfig-style.c: get rid of compiler warnings about
	dereferencing type-punned pointers.

2007-04-12  Sven Neumann  <sven@gimp.org>

	* app/tools/gimplevelstool.c
	* app/tools/gimpcurvestool.c
	* app/xcf/xcf-save.c